# evo-common

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: config.rs  lib.rs  logging.rs  messages.rs  skill.rs  tracing_context.rs
