[package]
name = "evo-common"
version = "0.3.0"
edition = "2024"
description = "Shared types, protocols, and utilities for the Evo self-evolution agent system"
license = "MIT"
repository = "https://github.com/ai-evo-agents/evo-common"
readme = "README.md"
keywords = ["agents", "ai", "self-evolution"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
